--- a/source/_posts/算法·动态规划.md
+++ b/source/_posts/算法·动态规划.md
@@ -410,10 +410,185 @@ int main(){
 
 ## 计数类DP
 
+* 技巧：当区间不好算的时候就转化为就前缀和
+
+![](/img/235506.jpg)
+
+![](/img/、000709.jpg)
+
+
+
 ## 数位统计DP
+
+### 求出1在每一位上出现的次数
+
+```
+
+```
+
+
 
 ## 状态压缩DP
 
+### 蒙德里安的梦想
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=12,M=1<<N;
+int n,m;
+int f[N][M];
+bool st[M];
+int main(){
+    while(cin>>n>>m,n||m){
+        memset(f,0,sizeof f);
+        for(int i =0;i<1<<n;i++){
+            st[i]=true;
+            int cnt=0;
+            for(int j=0;j<n;j++)
+                if(i>>j&1)
+                {
+                    if(cnt &1)st[i]=false;
+                    cnt=0;
+                }
+            else cnt++;
+            if(cnt &1)st[i]=false;
+        }
+        f[0][0]=1;
+        for(int i =1;i<=m;i++)
+            for(int j =0;j<1<<n;j++)
+                for(int k =0;k<1<<n;k++)
+                    if((j&k)==0&&st[j|k])
+                        f[i][j]+=f[i-1][k];
+        cout<<f[m][0]<<endl;
+    }
+    return 0;
+}
+```
+
+### 最短hamilton路径
+
+![](/img/015408.jpg)
+
+```c++
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+using namespace std;
+const int N=20,M=1<<N;
+int n;
+int w[N][N];
+int f[M][N];
+int main(){
+    cin>>n;
+    for(int i =0;i<n;i++)
+        for(int j=0;j<n;j++)
+            cin>>w[i][j];
+    memset(f,0x3f,sizeof f);
+        f[1][0]=0;
+    for(int i =0;i<1<<n;i++)
+        for(int j=0;j<n;j++)
+            if(i>>j&1)
+                for(int k=0;k<n;k++)
+                    if((i-(1<<j))>>k&1)
+                        f[i][j]=min(f[i][j],f[i-(1<<j)][k]+w[k][j]);
+    cout<<f[(1<<n)-1][n-1]<<endl;
+    return 0;
+}
+```
+
 ## 树形DP
 
+### 没有上司的舞会
+
+![](/img/022003.jpg)
+
+![](/img/022107.jpg)
+
+```c++
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+using namespace std;
+const int N=6010;
+int n;
+int happy[N];
+int h[N],e[N],ne[N],idx;
+int f[N][2];
+bool has_father[N];
+void add(int a,int b){
+    e[idx]=b,ne[idx]=h[a],h[a]=idx++;
+}
+void dfs(int u ){
+    f[u][1]=happy[u];
+    for(int i =h[u];i!=-1;i=ne[j])
+    {
+        int j =e[i];
+        dfs(j);
+        f[u][0]+=max(f[j][0],f[j][1]);
+        f[u][1]+=f[j][0];
+    }
+}
+int main(){
+    cin >>n;
+    for(int i=1;i<=n;i++) cin>>happy[i];
+    memset(h,-1,sizeof h);
+    for(int i=0;i<n-1;i++)
+    {
+        int a,b;
+        cin>>a>>b;
+        has_father[a]=true;
+     add(b,a);
+    }
+    int root =1;
+    while(has_father[root])root++;
+    dfs(root);
+    cout<<max(f[root][0],f[root][1])
+        return 0;
+}
+```
+
 ## 记忆化搜索
+
+### 滑雪问题
+
+![](/img/023350.jpg)
+
+```c++
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+using namespace std;
+const int N=310;
+int n,m;
+int h[N][N];
+int f[N][N];
+int dx[4]={-1,0,1,0},dy[4]={0,1,0,-1};
+int dp(int x,int y){
+    int &v=f[x][y];
+    if(v!=-1)return v;
+    v=1;
+    for(int i =0;i<4;i++)
+    {
+        int a=x+dx[i],b=y+dy[i];
+        if(a>=-1&&a<=n&&b>=1&&b<=m&&h[a][b]<h[x][y]) v=max(v,dp(a,b)+1);
+    }
+    return v;
+    
+}
+int main(){
+cin >>n>>m;
+for(int i =1;i<=n;i++)
+	for(int j=1;j<=m;j++)
+		cin>>h[i][j];
+    memset(f,-1,sizeof f);
+    int res=0;
+    for(int i =1;i<=n;i++)
+        	for(int j =1;j<=m;j++)
+                res=max(res,dp(i,j));
+    cout<<res;
+    return 0;
+}
+```
+
