--- a/source/_posts/贪心.md
+++ b/source/_posts/贪心.md
@@ -1,5 +1,5 @@
 ---
-title: 贪心
+title: 算法·贪心
 date: 2024-03-30 02:15:00
 tags: 算法
 sticky: 106
@@ -91,3 +91,155 @@ int main(){
 ```
 
 ### 区间覆盖
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=100010;
+int n;
+struct Range{
+    int l,r;
+    bool operator< (const Range &w)const 
+    {
+        return l<w.l;
+    }
+}range[N];
+int main(){
+    int st,ed;
+    cin>>st>>ed;
+    cin>>n;
+    for(int i=0;i<n;i++){
+        int l,r;
+        cin >> l>>r;
+        range[i]={l,r};
+    }
+    sort(range,range+n);
+    int res = 0;
+    bool success=false;
+    for(int i=0;i<n;i++)
+    {
+        int j=i,r=-2e9;
+        while(j<n&&range[j].l<=start){
+            r=max(r,range[j].r);
+            j++;
+        }
+        if(r<st){
+            res=-1;
+            break;
+        }
+    res++;
+    if(r>=ed)break;
+    st=r;
+        i=j-1;
+    }
+       if(!success)res=-1;
+    cout<<res;
+    return 0;
+}
+```
+
+## Huffman树
+
+### 合并果子
+
+```c++
+#include <iostream>
+#include <algorithm>
+#include <queue>
+using namespace std;
+int main(){
+int n;
+cin>>n;
+priority_queue<int,vector<int>,greater<int>>heap;
+while(n--){
+   int x;
+   cin>>x;
+   heap.push(x);
+}
+int res=0;
+while(heap.size()>1){
+int a=heap.top();heap.pop();
+int b=heap.top();heap.pop();
+res+=a+b;
+heap.push(a+b);
+}
+	cout<<res;
+	return 0;
+}
+```
+
+### 排序不等式
+
+```c++
+//打水问题
+#include <iostream>
+#include <algorithm>
+using namespace std;
+typedef long long LL;
+const int N-100010;
+int n;
+int t[N];
+int main(){
+    cin >>n;
+    for(int i =0;i<n;i++)
+        cin>>t[i];
+    sort(t,t+n);
+    LL res=0;
+    for(int i = 0;i<n;i++)res+=t[i]*(n-i-1);
+    cout<<res;
+    return 0;
+}
+```
+
+### 绝对值不等式
+
+```c++
+//仓库选址
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=100010;
+int n;
+int a[N];
+int main(){
+    cin>>n;
+    for(int i= 0;i<n;i++) cin>>a[i];
+    sort(a,a+n);
+    int res=0;
+    for(int i=0;i<n;i++)res+=abs(a[i]-a[n/2]);
+    cout<<res;
+    return 0;
+}
+```
+
+### 推公式
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=50010;
+typedef pair<int,int>PII;
+int n;
+PII cow[N];
+int main(){
+    cin>>n;
+    for(int i =0;i<n;i++){
+        int w,s;
+        cin>>w>>s;
+        cow[i]={w+s,w};
+    }
+    sort(cow,cow+n);
+    int res=-2e9,sum=0;
+    for(int i =0;i<n;i++){
+        int w=cow[i].second,s=cow[i].first-w;
+        res = max(res,sum-s);
+        res+=w;
+        
+    }
+    cout<<res;
+    return 0;
+}
+```
+
