--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -220,7 +220,7 @@ A、B位数都是10^6
 //如果B>A输出-（B-A)
 bool cmp(vector<int> &A,vector<int> &B)
 {
-    if(A.size()!B.size()) return A.size()>B.size();
+    if(A.size()!=B.size()) return A.size()>B.size();
     for(int i = A.size()-1;i>=0;i--)
         	if(A[i]!=B[i])
                 	return A[i]>B[i];
@@ -796,6 +796,12 @@ else empty;
 stk[tt];
 ```
 
+#### 中缀表达式
+
+```c++
+
+```
+
 #### 单调栈
 
 * 单调栈和单调队列都是用栈和队列暴力模拟问题，即找出朴素算法，再看一下没用的元素，删掉元素看是否有单调性，有单调性可以用单调队列或者单调栈优化问题，取极值直接找两个端点，找一个点可以用二分
@@ -876,6 +882,15 @@ for (int i = 0; i < n; i ++ )
 }
 ```
 
+```c++
+//
+
+
+
+```
+
+
+
 ## kmp
 
 思路：
@@ -925,7 +940,7 @@ for (int i = 0; i < n; i ++ )
 ```c++
 // s[]是长文本，p[]是模式串，n是s的长度，m是p的长度 s[]要匹配的长串，p[]比较短的模板串
 求模式串的Next数组：
-for (int i = 2, j = 0; i <= m; i ++ )
+for (int i = 2, j = 0; i <= m; i ++ )//扫描p的长度
 {
     while (j && p[i] != p[j + 1]) j = ne[j];
     if (p[i] == p[j + 1]) j ++ ;
@@ -933,7 +948,7 @@ for (int i = 2, j = 0; i <= m; i ++ )
 }
 
 // 匹配O(n)
-for (int i = 1, j = 0; i <= n; i ++ )
+for (int i = 1, j = 0; i <= n; i ++ )//扫描s的长度
 {
     while (j && s[i] != p[j + 1]) j = ne[j];
     if (s[i] == p[j + 1]) j ++ ;
@@ -960,7 +975,7 @@ int main(){
 	cin.tie(0);
 	cin >> n>>p+1>>m>>s+1;
 	//求next数组的过程
-	for(int i = 1,j=0;j<=m;i++){
+	for(int i = 2,j=0;i<=n;i++){
 		while(j&&p[i]!=p[j+1]) j = ne[j];
 		if(p[i]==p[j+1])j++;
 		ne[i] = j;
@@ -1010,7 +1025,7 @@ kmp匹配过程
 ```c++
 int son[N][26], cnt[N], idx;
 // 0号点既是根节点，又是空节点
-// son[][]存储树中每个节点的子节点
+// son[][]存储树中每个节点的子节点的坐标
 // cnt[]存储以每个节点结尾的单词数量
 //idx存储当前用到了哪个下标，下标是0的点，既是根节点又是空节点
 
@@ -1021,8 +1036,8 @@ void insert(char *str)
     for (int i = 0; str[i]; i ++ )
     {
         int u = str[i] - 'a';//a-z映射成0-25
-        if (!son[p][u]) son[p][u] = ++ idx;//不存在对应字母就创建出来
-        p = son[p][u];//继续往下走
+        if (!son[p][u]) son[p][u] = ++ idx;//不存在对应字母就创建出来，u是要存的字母在26个字母中对应的位置
+        p = son[p][u];//p的坐标变为当前点的下一个字母对应的坐标，如要插入abcd，之前p在根节点，为son[0][0]，现在son[0][0]已经插入++idx，即son[0][0]=1，所以此时p变为1，转到a开始寻找a的子节点。
     }
     cnt[p] ++ ;//以这个点为结尾的单词数量多了一个
 }
@@ -1288,6 +1303,25 @@ down(k);up(k);
     }
 ```
 
+```
+//寻找质数
+for(int i =  ; ;i++){
+bool flag =true;
+for(int j = 2;j*j<=i;j++)
+	if(i%j==0){
+	flag =false ;
+	break;
+	}
+	if(flag)
+	{
+	cout<<i<<endl
+	break;
+	}
+}
+```
+
+
+
 ### 开放寻址法
 
 * 只开一个数组，但是开的长度一般是输入数据的2-3倍
@@ -1311,6 +1345,12 @@ memset(h,0x3f,sizeof h);//初始化哈希表
         }
         return t;//如果x在哈希表中，返回的就是x的下标，如果x不在哈希表中，返回的就是x应该插入的位置
     }
+
+//插入一个数字
+h[find(x)]=x;
+//判断数字是否在哈希表中
+if(h[find(x)])== null cout<<"No";
+else cout<<"Yes";
 ```
 
 ### 字符串哈希
