--- a/source/_posts/备战408（习题本）.md
+++ b/source/_posts/备战408（习题本）.md
@@ -90,3 +90,8 @@ index_img: /img/1920x1080 (3).jpg
 
 [29. 删除链表中重复的节点 - AcWing题库](https://www.acwing.com/problem/content/27/)
 
+# 模拟栈
+
+## 表达式求值
+
+[3302.表达式求值 -AcWing题库](https://www.acwing.com/problem/content/3305/)
