--- a/source/_posts/算法·搜索与图论.md
+++ b/source/_posts/算法·搜索与图论.md
@@ -345,7 +345,7 @@ int bfs()
 ```c++
 int n,m;
 int h[N],e[N],ne[N],idx;
-int d[N],q[N];
+int d[N],q[N];//d[n]表示入度，q[n]是拓扑序列
 void add(int a,int b){
     e[idx] = b;
     ne[idx] = h[a];
@@ -406,6 +406,16 @@ bool topsort()
       * 如果限制经过的边数，只能用bellman-ford算法
 
 #### 朴素dijkstra算法
+
+```
+思路：
+定义距离数组，判断数组，存储结构
+初始化距离和存储结构
+第一个点的距离定义为0
+取出最新点，找出最新点的最短距离
+用该最短距离更新
+判断长度，得出连不连通
+```
 
 * 时间复杂度是O(n²+m)，n表示点数，m表示边数
 * 初始化距离
@@ -525,7 +535,7 @@ dist[b]<=dist[a]+w 三角不等式
 ```c++
 int n, m;       // n表示点数，m表示边数
 int dist[N];        // dist[x]存储1到x的最短路距离
-
+int bakcup[N];
 struct Edge     // 边，a表示出点，b表示入点，w表示边的权重
 {
     int a, b, w;
@@ -539,12 +549,12 @@ int bellman_ford()
 
     // 如果第n次迭代仍然会松弛三角不等式，就说明存在一条长度是n+1的最短路径，由抽屉原理，路径中至少存在两个相同的点，说明图中存在负权回路。如果有负权回路，最短路不一定存在。
     for (int i = 0; i < n; i ++ )
-    {
+    {	
+        memcpy(backup,dist,sizeof dist)
         for (int j = 0; j < m; j ++ )
         {
             int a = edges[j].a, b = edges[j].b, w = edges[j].w;
-            if (dist[b] > dist[a] + w)
-                dist[b] = dist[a] + w;//更新路径，更新的过程叫做松弛操作
+            dist[b]=min(dist[b],backup[a]+w)//更新路径，更新的过程叫做松弛操作
         }
     }
 
