--- a/source/_posts/算法·搜索与图论.md
+++ b/source/_posts/算法·搜索与图论.md
@@ -853,17 +853,17 @@ void add(int a,int b){
     e[idx]=b,ne[idx]=h[a],h[a]=idx++;
 }
 // 参数：u表示当前节点，c表示当前点的颜色
-bool dfs(int u, int c)
+bool dfs(int u, int c)//染色邻点过程
 {
-    color[u] = c;
-    for (int i = h[u]; i != -1; i = ne[i])
+    color[u] = c;//记录当前节点的颜色
+    for (int i = h[u]; i != -1; i = ne[i])//遍历当前点的所有邻点
     {
-        int j = e[i];
-        if (color[j] == -1)
+        int j = e[i];//取出邻点编号
+        if (color[j] == -1)//当前点没有染色
         {
-            if (!dfs(j, !c)) return false;
+            if (!dfs(j, !c)) return false;//dfs(j,!c)染成另外一种颜色，没成功返回false
         }
-        else if (color[j] == c) return false;
+        else if (color[j] == c) return false;//如果已经染过颜色，判断是不是矛盾，矛盾返回false
     }
 
     return true;
@@ -874,13 +874,13 @@ bool check()
     memset(color, -1, sizeof color);
     bool flag = true;
     for (int i = 1; i <= n; i ++ )
-        if (color[i] == -1)
-            if (!dfs(i, 0))
+        if (color[i] == -1)//如果i没有被染色
+            if (!dfs(i, 0))//从i开始深度优先遍历图，逐个染色，如果return false，！false=true，说明出现矛盾
             {
-                flag = false;
+                flag = false;//出现矛盾，染色失败
                 break;
             }
-    return flag;
+    return flag;//顺利走到，没有染色失败
 }
 int main(){
     cin>> n >> m;
@@ -903,7 +903,7 @@ int h[N], e[M], ne[M], idx;     // 邻接表存储所有边，匈牙利算法中
 int match[N];       // 存储第二个集合中的每个点当前匹配的第一个集合中的点是哪个
 bool st[N];     // 表示第二个集合中的每个点是否已经被遍历过
 
-bool find(int x)
+bool find(int x)//能否在另一个集合中找到匹配的
 {
     for (int i = h[x]; i != -1; i = ne[i])
     {
@@ -913,13 +913,13 @@ bool find(int x)
             st[j] = true;
             if (match[j] == 0 || find(match[j]))
             {//没有匹配或者匹配了但是能够找到另一个匹配的
-                match[j] = x;//匹配
-                return true;
+                match[j] = x;//j是x匹配的点
+                return true;//匹配成功
             }
         }
     }
 
-    return false;
+    return false;//匹配失败
 }
 
 // 求最大匹配数，依次枚举第一个集合中的每个点能否匹配第二个集合中的点
