--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -168,7 +168,7 @@ int main(){
         for(int i =2;i<=x/i;i++)
             while(x%i==0){
                 x/=i;
-                primes[i]++;
+                primes[i]++;//此处primes[i]对应的i是质数即底数，i是first元素，primes[i]的值对应的是质数出现的次数即指数，对应的是second元素，即first对应的是p，second对应的是c
             }
         if(x>1)primes[x]++;
     }
@@ -206,7 +206,7 @@ int main(){
     LL res =1;
     for(auto prime:primes) {
          int p = prime.first,a=prime.second;
-        LL t = 0;
+        LL t = 1;
         while(a--) t=(t*p+1)%mod;
         res=res*t%mod;
     }
@@ -269,9 +269,9 @@ int phi(int x)
         if (x % i == 0)
         {
             res = res / i * (i - 1);
-            while (x % i == 0) x /= i;//分解质因数
+            while (x % i == 0) x /= i;//分解约数
         }
-    if (x > 1) res = res / x * (x - 1);//最后一个带2/x的质因子
+    if (x > 1) res = res / x * (x - 1);//最后一个带2/x的约数
 
     return res;//欧拉函数
 }
@@ -294,18 +294,25 @@ void get_eulers(int n)
     {
         if (!st[i])
         {
-            primes[cnt ++ ] = i;
-            euler[i] = i - 1;
+            primes[cnt ++ ] = i;//找出质数
+            euler[i] = i - 1;//质数的欧拉函数就是本身-1，因为他和他前面的数没有公因数，互质
         }
         for (int j = 0; primes[j] <= n / i; j ++ )
         {
-            int t = primes[j] * i;
-            st[t] = true;
-            if (i % primes[j] == 0)
-            {
+            int t = primes[j] * i;//*i * prime[j]的最小质因子就是prime[j]，则prime[j] * i就不是质数了，把它true掉
+            st[t] = true;//筛掉
+            if (i % primes[j] == 0)//这里求i * prime[j]的欧拉函数
+            {/*这里求i * prime[j]的欧拉函数，根据欧拉公式推导如下:
+1.euler[i]  = i * (1 - 1 / p1) * (1 - 1 / p2) * (1 - 1 / p3) * ... * (1 - 1 / pk)
+2.euler[i * prime[j]] = (i * prime[j]) * (1 - 1 / p1) * (1 - 1 / p2) * (1 - 1 / p3) * ... * (1 - 1 / pk)
+                由此可得euler[i * prime[j]] = prime[j] * euler[i]*/
                 euler[t] = euler[i] * primes[j];
                 break;
             }
+            /*此时prime[j]不是i的质因子，则推导如下：
+1.euler[     i      ]  =      i        * (1 - 1 / p1) * (1 - 1 / p2) * (1 - 1 / p3) * ... * (1 - 1 / pk)
+2.euler[i * prime[j]] = (i * prime[j]) * (1 - 1 / p1) * (1 - 1 / p2) * (1 - 1 / p3) * ... * (1 - 1 / pk) * (1 - 1 / prime[j])
+            由此可得euler[i * prime[j]] = euler[i] * (prime[j] - 1);*/
             euler[t] = euler[i] * (primes[j] - 1);
         }
     }
