--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -427,7 +427,7 @@ $$
 $$
 b存在乘法逆元的充要条件是b与模数m互质，当模数m位质数时，b^(m-2)即为b的乘法逆元
 
-b如果是p的倍数一定无解
+b如果是m的倍数一定无解，即b%m==0无解。
 
 ```c++
 #include <iostream>
@@ -461,16 +461,27 @@ int main(){
 
 有一对正整数a,b，那么存在非零整数x,y，使得ax+by=gcd(a,b)(gcd是最大公约数)，且为a和b能凑出来的最小的正整数，若一个数能整除gcd(a,b)则有解，否则无解
 
+* 整数中的裴蜀定理：
+
+  对于任意两个整数a、b，假设d是他们的最大公约数，ax+by=m，当且仅当m是d的倍数时有整数解。
+
 ```c++
 // 求x, y，使得ax + by = gcd(a, b)
 int exgcd(int a, int b, int &x, int &y)
 {
     if (!b)
     {
-        x = 1; y = 0;
+        x = 1; y = 0;/*如果b=0，则gcd(a, b) = 1 * a + 0 * b*/
         return a;
     }
-    int d = exgcd(b, a % b, y, x);
+    int d = exgcd(b, a % b, y, x);   /*此时我们假设已经求出来了x, y，ax + by = d，根据辗转相除法（欧几里得算法）分析：
+    此时为gcd(a, b)， 则下一循环为gcd(b, a % b)，此时我们求它的x1, y1可得
+    b * x1 + (a % b) * y1 
+    = b * x1 + (a - (a / b) * b) * y1 
+    = b * x1 + a * y1 – (a / b) * b * y1 
+    = a * y1 + b * (x1 – a / b * y1) 
+    我们发现: x = y1, y = x1 - a / b * y1因此我们根据这个规律可以推导出x和y*/ 
+  
     y -= (a/b) * x;
     return d;//d是最大公约数
 }
@@ -530,7 +541,7 @@ M=m_1*m_2*m_3*...*m_k
 $$
 
 $$
-M_i= \frac {M}{M_i}
+M_i= \frac {M}{m_i}
 $$
 
 $$
@@ -543,7 +554,76 @@ $$
 
 也被称为中国剩余定理
 
-* 求逆相当于解ax≡1（mod m），用扩展欧几里得算法可以求
+* 求逆即Mi^-1相当于解ax≡1（mod m），用扩展欧几里得算法可以求
+
+* ```
+  a mod b = c 等价于 (a + nb) mod b = c;
+  a mod b = c 等价于 2a mod 2b = 2c;
+  ```
+
+```c++
+//表达整数的奇怪方式
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+typedef long long LL;
+
+
+LL exgcd(LL a, LL b, LL &x, LL &y)
+{
+    if (!b)
+    {
+        x = 1, y = 0;
+        return a;
+    }
+
+    LL d = exgcd(b, a % b, y, x);
+    y -= a / b * x;
+    return d;
+}
+
+
+int main()
+{
+    int n;
+    cin >> n;
+
+    LL x = 0, m1, a1;
+    cin >> m1 >> a1;
+    for (int i = 0; i < n - 1; i ++ )
+    {
+        LL m2, a2;
+        cin >> m2 >> a2;
+        LL k1, k2;
+        LL d = exgcd(m1, m2, k1, k2);
+        if ((a2 - a1) % d)
+        {
+            x = -1;
+            break;
+        }
+
+        k1 *= (a2 - a1) / d;
+        k1 = (k1 % (m2/d) + m2/d) % (m2/d);
+
+        x = k1 * m1 + a1;
+
+        LL m = abs(m1 / d * m2);
+        a1 = k1 * m1 + a1;
+        m1 = m;
+    }
+
+    if (x != -1) x = (a1 % m1 + m1) % m1;
+
+    cout << x << endl;
+
+    return 0;
+}
+
+```
+
+
 
 ## 高斯消元
 
