--- a/source/_posts/算法·动态规划.md
+++ b/source/_posts/算法·动态规划.md
@@ -36,6 +36,8 @@ index_img: /img/1920x1080 (6).jpg
 
 * DP优化一般是对动态规划的代码或者计算方程进行等价变形
 
+* DP的集合划分一般考虑最后一步怎么走
+
 ## 背包问题
 
 ### 01背包
@@ -59,7 +61,7 @@ int main(){
 		cin>>v[i]>>w[i];//读入体积重量 
 		
 	for(int i = 1;i<=n;i++)
-		for(int j = 0;i<=m;j++)
+		for(int j = 0;j<=m;j++)
 			{
 				f[i][j]=f[i-1][j];
 				if(j>=v[i])f[i][j]=max(f[i][j],f[i-1][j-v[i]]+w[i]);
@@ -160,7 +162,7 @@ using namespace std;
 const int N=1010;
 int n,m;
 int v[N],w[N];
-int f[N][N];
+int f[N];
 int main(){
 	cin >> n>>m;
 	for(int i =1;i<=n;i++) cin >> v[i]>>w[i];
@@ -213,33 +215,47 @@ int main(){
 #include <iostream>
 #include <algorithm>
 using namespace std;
-const int N =25000,M=2010;
+/*二进制优化（下方举例说明）：
+①假定物品件数s=200
+②二进制形式k[n]={1,2,4,8,16,32,64,73}  其所有值相加是<=200  可以凑出[0~200]的所有数
+③除开最后一个数不是二进制形式，73=200-(1+2+4+8+16+31+64)
+④其余数，若定64，其中64+[0~63]->[0~127]
+⑤最后一个数73，其中73+[0~127]->[0~200] */
+const int N =11010,M=2010;
 int n,m;
-int v[N],w[N],s[N];
-int f[N];
+int v[N],w[N];
+int f[N];//这里N开的数据范围的依据:多重背包问题中的一个「箱子」相当于01背包问题中的一件「物品」，实际上我们是要将s[i]用几个箱子装进去，因此我们需要估计出多重背包问题中到底有多少个箱子。
+                               //这里的箱子也就是二进制优化下的s[i] 由题 s[i]<=2000 则log2000 < 11(log以2为底) 一共最多1000件物品，则我们需要开的范围就是 11*1000+10=11010
 int main(){
-    cin >> n>>m;
-    int cnt=0;
-    for(int i = 1;i<=n;i++){
+    cin >> n>>m;//组合方案中的最大价值
+    int cnt=0;//重新定义存储物品的编号
+    for(int i = 1;i<=n;i++){//循环物品种类
         int a,b,s;
-        cin >>a>>b>>s;
-        int k = 1;
-        while(k<=s){
-            cnt++
-                v[cnt]=a*k;
-            	v[cnt]=b*k;
-            s-=k;
-            k*=2;
+        cin >>a>>b>>s;//输入当前物品的体积，价值，个数
+        int k = 1;//定义箱子可以放物品的初始值 第一个箱子可以放一个i号物品
+        while(k<=s){//当总数小于最多可选的s件
+            cnt++;//编号增加 可以看成是每一个箱子的编号
+                v[cnt]=a*k;//这个箱子可以存的i号物品总体积  箱子可以放的物品总数 * 物品体积 = 物品总体积
+            	w[cnt]=b*k;
+            s-=k;//从总个数s中减去k个
+            k*=2;//二进制，乘以二继续循环
         }
-        if(s>0){
+        if(s>0){//若总个数s还有剩余，说明此时二进制无法完全覆盖，要找出s即最初s减去二进制综合的个数，即剩余可装多少件
            cnt++;
            v[cnt]=a*s;
            w[cnt]=b*s;
        }
     }
-       n=cnt;
-          for(int i =1;i<=n;i++)
-              for(int j = m;j>=v[i];j--)
+       n=cnt; //关键一步！将物品编号更改为所有物品在箱子里装完后箱子的编号
+        //上面结束后 我们将物品全部装进了箱子 我们不管想在背包里装多少个物品i，都可以装箱子的方式实现 
+    //例如要装7个物品i 我们就用物品i的1号2号3号箱子(1号能装1个i 2号能装2个i 3号能装4个i) 
+    //这就是我们使用二进制优化的意义，能将所有需要的物品数量表示出来
+    //由于所有需要的物品数量都能用不同箱子的组合表达 所以现在每个箱子的状态只能是 用或者不用 从而转化为01背包问题
+
+    //对照01背包代码
+
+          for(int i =1;i<=n;i++)//注意n已经被cnt重新赋值了
+              for(int j = m;j>=v[i];j--)//01背包逆序存储
                   f[j]=max(f[j],f[j-v[i]]+w[i]);
     cout<<f[m]<<endl;
     return 0;
@@ -348,6 +364,46 @@ int main(){
     return 0;
 }
 ```
+
+```c++
+//二分优化
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 100010;
+
+int n;
+int a[N];//记录数列
+int q[N];//记录单调队列，即q[i]为整个数列的严格单调递增序列，a[i]形状是w，q[i]形状是/
+
+int main()
+{
+    scanf("%d", &n);
+    for (int i = 0; i < n; i ++ ) scanf("%d", &a[i]);//读入数列
+
+    int len = 0;//记录最长子序列长度
+    for (int i = 0; i < n; i ++ )//遍历数据
+    {
+        int l = 0, r = len;//初始化某点最长子序列的长度
+        while (l < r)//二分找到小于a[i]的最大值点对应的坐标
+        {
+            int mid = l + r + 1 >> 1;
+            if (q[mid] < a[i]) l = mid;
+            else r = mid - 1;//l=r返回哪个都一样
+        }
+        len = max(len, r + 1);//r是小于a[i]的最大值对应的最长子序列的长度，因为a[i]大于q[mid]，所以加上该点长度就是r+1;
+        q[r + 1] = a[i];//单调队列记录该值对应的最长子序列的长度
+    }
+
+    printf("%d\n", len);
+
+    return 0;
+}
+```
+
+
 
 ### 最长公共子序列
 
