--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -425,7 +425,7 @@ $$
 $$
 \frac ab≡a*b^{-1}(modm)
 $$
-b存在乘法逆元的充要条件是b与模数m互质，当模数m位质数时，b^(m-2)即为b的乘法逆元
+b存在乘法逆元的充要条件是b与模数m互质，当模数m为质数时，b^(m-2)即为b的乘法逆元
 
 b如果是m的倍数一定无解，即b%m==0无解。
 
@@ -448,7 +448,7 @@ int main(){
     while(n--){
         int a,k,p;
         cin >> a>>p;
-        int res = ami(a,p-2,p);
+        int res = qmi(a,p-2,p);
         if(a%p) cout<<res;
         else cout<<"impossible";dddd
     }
@@ -708,10 +708,10 @@ int gauss(){
                     t=i;
         if(fabs(a[t][c])<eps)//当前列是不是0 
             continue
-        for(int i = c;i<=n;i++) swap(a[t][i],a[r][i]);//把绝对值最大的行换到最上面去
+        for(int i = c;i<=n;i++) swap(a[t][i],a[r][i]);//把绝对值最大的行的每一个数字换到最上面去
         for(int i = n;i>=c;i--) a[r][i]/=a[r][c];//枚举最大绝对值的行的每一个数，将该行第一个数变成1，同时同行改变其他数字
         for(int i = r+1;i<n;i++)
-            if(fabs(a[i][c])>eps)
+            if(fabs(a[i][c])>eps)//当前列不为0
                 for(int j = n;j>=c;j--)
                     a[i][j] -=a[r][j]*a[i][c];//将下列所有行的第c列消成0
         r++;
@@ -722,7 +722,7 @@ int gauss(){
                 return 2;//无解
         return 1;//有无穷多组解
     }
-    for (int i = n - 1; i >= 0; i -- )
+    for (int i = n - 1; i >= 0; i -- )//枚举行，从尾开始枚举
         for (int j = i + 1; j < n; j ++ )
             a[i][n] -= a[i][j] * a[j][n];//后面所有系数消成0
     return 0;//有唯一解
@@ -927,7 +927,7 @@ void get_primes(int n)      // 线性筛法求素数
 }
 
 
-int get(int n, int p)       // 求n！中的次数
+int get(int n, int p)       // 求n！中的质数的指数
 {
     int res = 0;
     while (n)
@@ -967,28 +967,21 @@ for (int i = 0; i < cnt; i ++ )     // 求每个质因数的次数
     sum[i] = get(a, p) - get(b, p) - get(a - b, p);
 }
 
-vector<int> res;
-res.push_back(1);
-
-for (int i = 0; i < cnt; i ++ )     // 用高精度乘法将所有质因子相乘
-    for (int j = 0; j < sum[i]; j ++ )
-        res = mul(res, primes[i]);
-
 int main(){
     int a,b;
     cin>>a>>b;
     get_primes(a);
-    for(int i = 0;i<cnt;i++)
+    for(int i = 0;i<cnt;i++)//遍历质数
     {
         int p =primes[i];
-        sum[i]=get(a)-get(b)-get(a-b);
+        sum[i]=get(a)-get(b)-get(a-b);//求出质数的指数
     }
     vector<int> res;
     res.push_back(1);
-    for(int i = 0;i<cnt;i++)
-        	for(int j =0;j<sum[i];j++)
+    for(int i = 0;i<cnt;i++)// 用高精度乘法将所有质因子相乘，先遍历质数
+        	for(int j =0;j<sum[i];j++)//遍历该质数的指数
                 res = mul(res,primes[i]);
-    for(int i = res.size()-1;i>=0;i--) cout<<res[i];
+    for(int i = res.size()-1;i>=0;i--) cout<<res[i];//高精度乘法的输出，倒着存正着输出
     puts("");
     return 0;
 }
@@ -1056,21 +1049,22 @@ typedef long long LL;
 int main(){
 	cin >> n>>m;
 	for(int i =0;i<m;i++) cin>>p[i];
-	int res = 0;
-	for(int i = 1;i<1<<m;i++){
+	int res = 0;    // 利用位运算来统计所有集合被选的状态 将i用二进制表示 其中1为当前位集合被选 0为没有选 
+
+	for(int i = 1;i<1<<m;i++){// 这里的 1 << m 是等价于2 的 m次方 ， 有2的m次方个选择个数；
 		int t =1,cnt=0;    //t表示所有容斥数的乘积，cnt用来表示有多少个集合 
-		for(int j =0;j<m;j++)
-			if(i>>j&1){
+		for(int j =0;j<m;j++)// m代表的是把i进行2进制移位操作，需要把i化为2进制 m位;
+			if(i>>j&1){// 移位判断为0还是1;
 				cnt ++;
-				if((LL)t*p[j]>n){
+				if((LL)t*p[j]>n){ // 更新t值;
 					t=-1;
 					break;
 				}
                 t*=p[j];
 			}
-			if(t!=-1)
+			if(t!=-1)//说明刚好整除
 			{
-				if(cnt%2) res+=n/t;
+				if(cnt%2) res+=n/t;// 判断s是奇数还是偶数， 奇数加偶数减
 				else res-=n/t;
 			}
 		
@@ -1156,6 +1150,8 @@ n个图的局面：
 
 ![](/img/121057.jpg)
 
+如果有多个独立的局面的话，可以分别求每个sg的值，然后异或起来，就是当前整个游戏sg的值
+
 #### 定理
 
 有向图游戏的某个局面必胜，当且仅当该局面对应节点的SG函数值大于0。
@@ -1172,33 +1168,34 @@ n个图的局面：
 using namespace std;
 const int N=110,M=10010;
 int n,m;
-int s[N],f[N];
+int s[N],f[N];//s存储操作数量，f存储sg函数
 int sg(int x){
-	if(f[x]!=-1) return f[x];
+	if(f[x]!=-1) return f[x];//说明已经找出该点的sg函数，不重复计算
 	
-	unordered_set<int> S;
+	unordered_set<int> S;//用来存储所有能够到的局面
 	for(int i = 0;i<m;i++){
-		int sum=s[i];
-		if(x>=sum)S.insert(sg(x-sum));
+		int sum=s[i];//从中取出s[i]个石子
+		if(x>=sum)S.insert(sg(x-sum));//如果取走石子的个数没有超过剩余石子的个数，说明可以取走，往记录图中加入该局面
 		
 	}
+    //mex操作
 	for(int i = 0;;i++)
-		if(!S.count(i))
-			return f[x]=1;
+		if(!S.count(i))//如果该局面没有出现过
+			return f[x]=i;//说明该点的sg就是它本身
 	
 	
 }
 int main(){
 	cin >>m;
 	for(int i =0;i<m;i++)
-		cin >>s[i];
+		cin >>s[i];//读入每次可取操作数
 		cin>>n;
-		memset(f,-1,sizeof f);
+		memset(f,-1,sizeof f);//初始化
 		int res =0;
 		for(int i = 0;i<n;i++){
 			int x;
-			cin>>x;
-			res^=sg(x);
+			cin>>x;//读入石子数量
+			res^=sg(x);//有向图往下一个节点走
 		}
 		if(res) puts("Yes");
 		else puts("No");
