--- a/source/_posts/算法·动态规划.md
+++ b/source/_posts/算法·动态规划.md
@@ -38,7 +38,20 @@ index_img: /img/1920x1080 (6).jpg
 
 * DP的集合划分一般考虑最后一步怎么走
 
+* 动态转移方程涉及到i-1的时候一般下标从1开始比较好
+
 ## 背包问题
+
+### 总结
+
+* 01背包
+  * N件物品，每件物品只能使用一次
+* 完全背包
+  * n种物品，每种物品有无限件可以使用
+* 多重背包
+  * n种物品，每种物品最多s件
+* 分组背包
+  * n组物品，每组物品最多选一个
 
 ### 01背包
 
@@ -443,22 +456,23 @@ int main(){
 using namespace std;
 const int N=310;
 	int n;
-	int s[N];
-	int f[N][N];
+	int s[N];//前缀和
+	int f[N][N];//状态数组
 	
 int main(){
  cin >>n;
  for(int i =1;i<=n;i++)	cin>>s[i];
  	for(int i =1;i<=n;i++) 		s[i]+=s[i-1];
-	for(int len=2;len<=n;len++)
-		for(int i =1;i+len-1<=n;i++){
-			int l = i,r=i+len-1;
-			f[l][r]=1e8;
-			for(int k = l;k<r;k++)
+    //状态转移
+	for(int len=2;len<=n;len++)//枚举区间长度，一般区间dp问题都是先枚举区间长度，再枚举区间左端点
+		for(int i =1;i+len-1<=n;i++){//枚举区间长度下对应的左端点
+			int l = i,r=i+len-1;//区间的左右端点
+			f[l][r]=1e8;//左右端点对应的最小值初始化
+			for(int k = l;k<r;k++)//k在l和r之间
 				f[l][r]=min(f[l][r],f[l][k]+f[k+1][r]+s[r]-s[l-1]);
 				
 		}
-		cout<<f[i][n];
+		cout<<f[1][n];
 		return 0;
  
 }
@@ -478,7 +492,82 @@ int main(){
 
 ### 求出1在每一位上出现的次数
 
-```
+```c++
+#include <iostream>
+#include <algorithm>
+#include <vector>
+
+using namespace std;
+
+const int N = 10;
+
+/*
+
+001~abc-1, 999
+
+abc
+    1. num[i] < x, 0
+    2. num[i] == x, 0~efg
+    3. num[i] > x, 0~999
+
+*/
+
+int get(vector<int> num, int l, int r)
+{
+    int res = 0;
+    for (int i = l; i >= r; i -- ) res = res * 10 + num[i];
+    return res;
+}
+
+int power10(int x)
+{
+    int res = 1;
+    while (x -- ) res *= 10;
+    return res;
+}
+
+int count(int n, int x)
+{
+    if (!n) return 0;
+
+    vector<int> num;
+    while (n)
+    {
+        num.push_back(n % 10);
+        n /= 10;
+    }
+    n = num.size();
+
+    int res = 0;
+    for (int i = n - 1 - !x; i >= 0; i -- )
+    {
+        if (i < n - 1)
+        {
+            res += get(num, n - 1, i + 1) * power10(i);
+            if (!x) res -= power10(i);
+        }
+
+        if (num[i] == x) res += get(num, i - 1, 0) + 1;
+        else if (num[i] > x) res += power10(i);
+    }
+
+    return res;
+}
+
+int main()
+{
+    int a, b;
+    while (cin >> a >> b , a)
+    {
+        if (a > b) swap(a, b);
+
+        for (int i = 0; i <= 9; i ++ )
+            cout << count(b, i) - count(a - 1, i) << ' ';
+        cout << endl;
+    }
+
+    return 0;
+}
 
 ```
 
