--- a/source/_posts/算法·动态规划.md
+++ b/source/_posts/算法·动态规划.md
@@ -502,7 +502,7 @@ using namespace std;
 const int N = 10;
 
 /*
-
+abc x yyy vs abc num[i] efg
 001~abc-1, 999
 
 abc
@@ -512,7 +512,7 @@ abc
 
 */
 
-int get(vector<int> num, int l, int r)
+int get(vector<int> num, int l, int r)//求出从num中l位到r位的数字
 {
     int res = 0;
     for (int i = l; i >= r; i -- ) res = res * 10 + num[i];
@@ -533,10 +533,10 @@ int count(int n, int x)
     vector<int> num;
     while (n)
     {
-        num.push_back(n % 10);
+        num.push_back(n % 10);//析出每一位数字
         n /= 10;
     }
-    n = num.size();
+    n = num.size();//n为总共的位数
 
     int res = 0;
     for (int i = n - 1 - !x; i >= 0; i -- )
@@ -578,36 +578,88 @@ int main()
 ### 蒙德里安的梦想
 
 ```c++
+#include <cstring>
 #include <iostream>
 #include <algorithm>
+#include <vector>
+
 using namespace std;
-const int N=12,M=1<<N;
-int n,m;
-int f[N][M];
-bool st[M];
-int main(){
-    while(cin>>n>>m,n||m){
-        memset(f,0,sizeof f);
-        for(int i =0;i<1<<n;i++){
-            st[i]=true;
-            int cnt=0;
-            for(int j=0;j<n;j++)
-                if(i>>j&1)
-                {
-                    if(cnt &1)st[i]=false;
-                    cnt=0;
+
+typedef long long LL;
+
+const int N = 12, M = 1 << N;//二进制存储，所以要开2^n位
+
+int n, m;
+LL f[N][M];// 第一维表示列， 第二维表示所有可能的状态
+vector<int> state[M];
+bool st[M]; //存储每种状态是否有奇数个连续的0，如果奇数个0是无效状态，如果是偶数个零置为true。
+
+int main()
+{
+    while (cin >> n >> m, n || m)//读入n,m;
+    {//第一部分：预处理1
+        //对于每种状态，先预处理每列不能有奇数个连续的0
+        for (int i = 0; i < 1 << n; i ++ )//遍历所有方案，即其中一列每一行的01分布状况，i记录的就是一个二进制数，比如i=10010就是记录该列的占领状况
+        {
+            int cnt = 0;//记录连续的0的个数
+            bool is_valid = true;// 某种状态没有奇数个连续的0则标记为true
+            for (int j = 0; j < n; j ++ )//遍历这一列，从上到下
+                if (i >> j & 1)
+                {  //i >> j位运算，表示i（i在此处是一种状态）的二进制数的第j位； 
+                     // &1为判断该位是否为1，如果为1进入if
+                    if (cnt & 1)
+                    { //这一位为1，看前面连续的0的个数，如果是奇数（cnt &1为真）则该状态不合法
+                        is_valid = false;//前面是奇数个0，所以该状态不能放入竖放方块
+                        break;
+                    }
+                    cnt = 0;// 既然该位是1，并且前面不是奇数个0（经过上面的if判断），计数器清零。
+                    //其实清不清零没有影响
                 }
-            else cnt++;
-            if(cnt &1)st[i]=false;
+                else cnt ++ ; //否则的话该位还是0，则统计连续0的计数器++。
+            if (cnt & 1) is_valid = false; //最下面的那一段判断一下连续的0的个数
+            st[i] = is_valid; //状态i是否有奇数个连续的0的情况,输入到数组st中
         }
-        f[0][0]=1;
-        for(int i =1;i<=m;i++)
-            for(int j =0;j<1<<n;j++)
-                for(int k =0;k<1<<n;k++)
-                    if((j&k)==0&&st[j|k])
-                        f[i][j]+=f[i-1][k];
-        cout<<f[m][0]<<endl;
+  //第二部分：预处理2
+        // 经过上面每种状态 连续0的判断，已经筛掉一些状态。
+        //下面来看进一步的判断：看第i-2列伸出来的和第i-1列伸出去的是否冲突
+        for (int i = 0; i < 1 << n; i ++ )//遍历所有方案，即其中一列每一行的01分布状况，i记录的就是一个二进制数，比如i=10010就是记录该列的占领状况
+        {
+            state[i].clear();//清空上次操作遗留的状态，防止影响本次状态。
+            for (int j = 0; j < 1 << n; j ++ )//对于第i列的所有状态
+                if ((i & j) == 0 && st[i | j])// 第i-2列伸出来的 和第i-1列伸出来的不冲突(不在同一行) 
+                    //解释一下st[j | k] 
+                //已经知道st[]数组表示的是这一列没有连续奇数个0的情况，
+                //我们要考虑的是第i-1列（第i-1列是这里的主体）中从第i-2列横插过来的，
+                //还要考虑自己这一列（i-1列）横插到第i列的
+                //比如 第i-2列插过来的是k=10101，第i-1列插出去到第i列的是 j =01000，
+                //那么合在第i-1列，到底有多少个1呢？
+                //自然想到的就是这两个操作共同的结果：两个状态或。 j | k = 01000 | 10101 = 11101
+                //这个 j|k 就是当前 第i-1列的到底有几个1，即哪几行是横着放格子的
+                    state[i].push_back(j);
+             //二维数组state[i]表示第i行， 
+                    //表示 第i列“真正”可行的状态，
+                    //如果第i-1列的状态j和i不冲突则压入state数组中的第i行。
+                    //“真正”可行是指：既没有前后两列伸进伸出的冲突；又没有连续奇数个0。
+
+        }
+
+        memset(f, 0, sizeof f); //全部初始化为0，因为是连续读入，这里是一个清空操作。
+        //类似上面的state[j].clear()
+
+        f[0][0] = 1;// 这里需要回忆状态表示的定义
+        //按定义这里是：前第-1列都摆好，且从-1列到第0列伸出来的状态为0的方案数。
+        //首先，这里没有-1列，最少也是0列。
+        //其次，没有伸出来，即没有横着摆的。即这里第0列只有竖着摆这1种状态。
+        for (int i = 1; i <= m; i ++ ) //遍历每一列:第i列合法范围是(0~m-1列)
+            for (int j = 0; j < 1 << n; j ++ )//遍历当前列（第i列）所有状态j
+                for (auto k : state[j])// 遍历第i-1列的状态k，如果“真正”可行，就转移
+                    f[i][j] += f[i - 1][k]; // 当前列的方案数就等于之前的第i-1列所有状态k的累加。
+
+        cout << f[m][0] << endl;//最后答案是什么呢？
+        //f[m][0]表示 前m-1列都处理完，并且第m-1列没有伸出来的所有方案数。
+        //即整个棋盘处理完的方案数
     }
+
     return 0;
 }
 ```
@@ -621,24 +673,25 @@ int main(){
 #include <cstring>
 #include <algorithm>
 using namespace std;
-const int N=20,M=1<<N;
+const int N=20,M=1<<N; //点的选取状态
 int n;
-int w[N][N];
-int f[M][N];
+int w[N][N];//初始数组
+int f[M][N];//dp数组，一维表示路径，二维表示终点。
 int main(){
     cin>>n;
     for(int i =0;i<n;i++)
         for(int j=0;j<n;j++)
             cin>>w[i][j];
-    memset(f,0x3f,sizeof f);
-        f[1][0]=0;
-    for(int i =0;i<1<<n;i++)
-        for(int j=0;j<n;j++)
-            if(i>>j&1)
-                for(int k=0;k<n;k++)
-                    if((i-(1<<j))>>k&1)
-                        f[i][j]=min(f[i][j],f[i-(1<<j)][k]+w[k][j]);
-    cout<<f[(1<<n)-1][n-1]<<endl;
+    memset(f,0x3f,sizeof f);//寻求最小值，初始化大值
+        f[1][0]=0;//[1][0]中的0代表终点，1代表路径，自己到自己的路径为0
+    for(int i =0;i<1<<n;i++)//i记录路径使用状况，二进制表示
+        for(int j=0;j<n;j++)//j表示走到了哪个点
+            if(i>>j&1)//路径包含j这个点
+                for(int k=0;k<n;k++)//枚举从哪个点转移过来
+                    if((i-(1<<j))>>k&1)//路径包含k这个点
+                        f[i][j]=min(f[i][j],f[i-(1<<j)][k]+w[k][j]);//终点为k，走过i-1<<j的路径加上k到j的距离
+    cout<<f[(1<<n)-1][n-1]<<endl;//(1 << n) - 1 中-1是因为我一开始就为1，要除去 
+
     return 0;
 }
 ```
@@ -717,7 +770,7 @@ int dp(int x,int y){
     for(int i =0;i<4;i++)
     {
         int a=x+dx[i],b=y+dy[i];
-        if(a>=-1&&a<=n&&b>=1&&b<=m&&h[a][b]<h[x][y]) v=max(v,dp(a,b)+1);
+        if(a>=1&&a<=n&&b>=1&&b<=m&&h[a][b]<h[x][y]) v=max(v,dp(a,b)+1);
     }
     return v;
     
