--- a/source/_posts/贪心.md
+++ b/source/_posts/贪心.md
@@ -75,14 +75,13 @@ int main(){
         range[i]={l,r};
     }
     sort(range,range+n);
-  priority_queue<int,vector<int>,greater<int>> heap;
-    for(int i=0;i<n;i++)
+  priority_queue<int,vector<int>,greater<int>> heap;//小根堆，里存的是每个分组的最大右端点
+    for(int i=0;i<n;i++){//遍历所有区间
         auto r=range[i];
-    if(heap.empty()||heap.top()>=r.l) heap.push(r);
-    else {
-        int t=heap.top();
-        heap.top();
-        heap.push(r,r);
+    if(heap.empty()||heap.top()>=r.l) heap.push(r.r);//如果小根堆为空或者l找不到比他小的右端点（由于是小根堆，heap.top()是所有r里面最小的，说明l和堆里面存的任一已有区间存在交集，需要另开数组存入。
+    else {//说明能够找到左端点大于的右端点，可以加入区间
+        heap.pop();//删除堆顶元素,因为堆顶元素的区间加入了新的线段，右端点被更新了
+        heap.push(r.r);
     }
         }
     cout<<heap.size();
@@ -95,46 +94,66 @@ int main(){
 ```c++
 #include <iostream>
 #include <algorithm>
+
 using namespace std;
-const int N=100010;
+
+const int N = 100010;
+
 int n;
-struct Range{
-    int l,r;
-    bool operator< (const Range &w)const 
+struct Range
+{
+    int l, r;
+    bool operator< (const Range &W)const
     {
-        return l<w.l;
+        return l < W.l;
     }
 }range[N];
-int main(){
-    int st,ed;
-    cin>>st>>ed;
-    cin>>n;
-    for(int i=0;i<n;i++){
-        int l,r;
-        cin >> l>>r;
-        range[i]={l,r};
-    }
-    sort(range,range+n);
-    int res = 0;
-    bool success=false;
-    for(int i=0;i<n;i++)
+
+int main()
+{
+    int st, ed;
+    scanf("%d%d", &st, &ed);
+    scanf("%d", &n);
+    for (int i = 0; i < n; i ++ )
     {
-        int j=i,r=-2e9;
-        while(j<n&&range[j].l<=start){
-            r=max(r,range[j].r);
-            j++;
+        int l, r;
+        scanf("%d%d", &l, &r);
+        range[i] = {l, r};
+    }
+
+    sort(range, range + n);
+
+    int res = 0;
+    bool success = false;
+    for (int i = 0; i < n; i ++ )
+    {
+        int j = i, r = -2e9;
+        while (j < n && range[j].l <= st)//遍历所有区间，更新l小于线段左边，右边端点的最大值
+        {
+            r = max(r, range[j].r);
+            j ++ ;
         }
-        if(r<st){
-            res=-1;
+
+        if (r < st)//如果最大值都在线段左边，说明没法覆盖
+        {
+            res = -1;
             break;
         }
-    res++;
-    if(r>=ed)break;
-    st=r;
-        i=j-1;
+
+        res ++ ;//找到一个新区间
+        if (r >= ed)//此时在l<st的前提下，r>ed，说明已经完全覆盖
+        {
+            success = true;//已找到，退出
+            break;
+        }
+
+        st = r;//找到一个区间，但未能覆盖末尾，寻求下一个区间，将起点更新为新找到的终点r，将已覆盖的线段切去。
+        i = j - 1;//range已经按照左端点从小到大排，此时的j为左端点小于等于st的最大值，此区间包括之前的区间已经使用过，由于j++,此时的区间序号应该是j-1，即下一轮要从j-1,即不符合条件的第一个开始遍历
     }
-       if(!success)res=-1;
-    cout<<res;
+
+    if (!success) res = -1;
+    printf("%d\n", res);
+
     return 0;
 }
 ```
