--- a/source/_posts/算法·题目.md
+++ b/source/_posts/算法·题目.md
@@ -406,7 +406,7 @@ int main()
     }//初始化前缀和
 
     LL res = 0;
-    cnt[0] = 1;//cnt[i]，里面的i记录的是余数，cnt[i]记录的是余数为i的前缀和的个数
+    cnt[0] = 1;//cnt[i]，里面的i记录的是余数，cnt[i]记录的是余数为i的前缀和的个数,由于余数为0的时候自己就是一种方案，所以加一
     for (int i = 1; i <= n; i ++ )//遍历前缀和
     {
         res += cnt[s[i] % k];//res = res+cnt[s[i]%k],这里s[i]%k对应的是当前前缀和的余数，cnt记录的是余数的数量，cnt[s[i]%k]即与s[i]同余的前缀和的数量，因为(a-b)≡0(mod~m) ⇿ a≡b(mod ~m)，所以当第一个s[i]%k=m的时候，此时余数为m的只有一个，它本身不构成方案，至少得另一个出现才构成方案，因此当有第二个同余m出现的时候，s[i]-s[j]≡0(mod k)，此时出现一个前缀和区间，同理，当第三个出现的时候,除去已经记录的s[i]s[j],s[i]s[k]，s[j]s[k]之间有两个前缀和区间，由此可见，当第n个同余的前缀和出现的时候，抛开之前已经记录的区间，其会和之前所有的同余前缀和(n-1个)产生新的n-1个区间，由于余数非0的cnt最初为0，所以不需要减，直接加等于。
@@ -417,5 +417,80 @@ int main()
 
     return 0;
 }
+```
+
+## 数论
+
+* 如果a,b均是正整数且互质，那么ax+by,x>=0,y>=0不能凑出的最大数是ab-a-b
+  $$
+  (a-1)(b-1)-1
+  $$
+  
+
+## 动态规划
+
+### 地宫取宝
+
+https://www.acwing.com/problem/content/1214/
+
+![](/img/195314.jpg)
+
+4层dp
+
+```c++
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 55, MOD = 1000000007;
+
+int n, m, k;
+int w[N][N];//记录价值的数组
+int f[N][N][13][14];//dp数组，f[i][j][cnt][value]ij记录的是当前走到的点的坐标,cnt记录的是已经取了k件物品，value记录的是取到的最后一件物品的价值，由于只有宝箱的价值大于手上的物品的价值才能取得，因此当取走宝箱里面的物品之后，其手中的物品的最大价值就是宝箱的价值。整个dp数组最终存储的就是（i，j）点，手中物品数量为cnt，手中物品最大价值为value的方案数量
+
+int main()
+{
+    cin >> n >> m >> k;
+    for (int i = 1; i <= n; i ++ )
+        for (int j = 1; j <= m; j ++ )
+        {
+            cin >> w[i][j];//存入价值
+            w[i][j] ++ ;//因为价值的范围为0-12，如果不增加1，容易产生0和0之间没法取大的情况，因此要先加1
+        }
+//初始化dp数组
+    f[1][1][1][w[1][1]] = 1;//（1，1）如果取得，则(1,1)手中1个物品，最大物品价值为w[1][1]的方案数为1
+    f[1][1][0][0] = 1;//（1，1）不取的方案数为1
+
+    for (int i = 1; i <= n; i ++ )
+        for (int j = 1; j <= m; j ++ )
+        {//遍历迷宫
+            if (i == 1 && j == 1) continue;//起点
+            for (int u = 0; u <= k; u ++ ) 
+                for (int v = 0; v <= 13; v ++ )
+                {//遍历uv情况
+                    int &val = f[i][j][u][v]; //取出方案数量
+                    val = (val + f[i - 1][j][u][v]) % MOD; //从上面来的，不取 
+                    val = (val + f[i][j - 1][u][v]) % MOD;//从左边来的，不取
+                    if (u > 0 && v == w[i][j]) //u>0说明取了，v就是目前的价值
+                    {
+                        for (int c = 0; c < v; c ++ )//枚举上一个格子的c
+                        {
+                            val = (val + f[i - 1][j][u - 1][c]) % MOD;
+                            val = (val + f[i][j - 1][u - 1][c]) % MOD;
+                        }
+                    }
+                }
+        }
+
+    int res = 0;
+    for (int i = 0; i <= 13; i ++ ) res = (res + f[n][m][k][i]) % MOD;
+
+    cout << res << endl;
+
+    return 0;
+}
+
 ```
 
