--- a/source/_posts/算法·题目.md
+++ b/source/_posts/算法·题目.md
@@ -419,6 +419,60 @@ int main()
 }
 ```
 
+### 递增三元组
+
+https://www.acwing.com/problem/content/description/1238/
+
+```c++
+#include <cstdio>
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+typedef long long LL;
+
+const int N = 100010;
+
+int n;
+int a[N], b[N], c[N];
+int as[N];  // as[i]表示在A[]中有多少个数小于b[i]
+int cs[N];  // cs[i]表示在C[]中有多少个数大于b[i]
+int cnt[N], s[N];
+
+int main()
+{
+    scanf("%d", &n);
+    for (int i = 0; i < n; i ++ ) scanf("%d", &a[i]), a[i] ++ ;
+    for (int i = 0; i < n; i ++ ) scanf("%d", &b[i]), b[i] ++ ;
+    for (int i = 0; i < n; i ++ ) scanf("%d", &c[i]), c[i] ++ ;
+
+    // 求as[]
+    for (int i = 0; i < n; i ++ ) cnt[a[i]] ++ ;
+    for (int i = 1; i < N; i ++ ) s[i] = s[i - 1] + cnt[i];   // 求cnt[]的前缀和
+    for (int i = 0; i < n; i ++ ) as[i] = s[b[i] - 1];
+
+    // 求cs[]
+    memset(cnt, 0, sizeof cnt);
+    memset(s, 0, sizeof s);
+    for (int i = 0; i < n; i ++ ) cnt[c[i]] ++ ;
+    for (int i = 1; i < N; i ++ ) s[i] = s[i - 1] + cnt[i];
+    for (int i = 0; i < n; i ++ ) cs[i] = s[N - 1] - s[b[i]];
+
+    // 枚举每个b[i]
+    LL res = 0;
+    for (int i = 0; i < n; i ++ ) res += (LL)as[i] * cs[i];
+
+    cout << res << endl;
+
+    return 0;
+}
+
+```
+
+
+
 ## 数论
 
 * 如果a,b均是正整数且互质，那么ax+by,x>=0,y>=0不能凑出的最大数是ab-a-b
@@ -492,5 +546,59 @@ int main()
     return 0;
 }
 
+```
+
+### 波动数列
+
+https://www.acwing.com/problem/content/1216/
+
+假设第一项为x,则长度为n的序列所有的项为
+$$
+x,x+d_1,x+d_2,x+d_3,...,x+d_{n-1}
+$$
+
+$$
+x+x+d_1+x+d_2+x+d_3+...+x+d_{n-1}=nx+(n-1)d_1+(n-2)d_2+...+d_n-1=s
+$$
+
+$$
+x=\frac{(s-((n-1)d_1+(n-2)d_2+(n-3)d_3+...+d_{n-1}))}{n}=\frac{s-D}{n}
+$$
+
+由上可知
+$$
+s-d≡0(mod~n)~~~s~mod~n=0~~~D~mod~n=0
+$$
+
+```c++
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 1010, MOD = 100000007;
+
+int f[N][N];//f[i,j]存储的是只考虑前i项d，且当前的总和mod n 余数为j的集合的数量
+
+int get_mod(int a, int b)   // 求a除以b的正余数
+{
+    return (a % b + b) % b;
+}
+
+int main()
+{
+    int n, s, a, b;
+    cin >> n >> s >> a >> b;
+
+    f[0][0] = 1;//第0项modn余数为0的只有一个
+    for (int i = 1; i < n; i ++ )//1-n-1
+        for (int j = 0; j < n; j ++ )//因为j是mod n的余数，所以j<n
+            f[i][j] = (f[i - 1][get_mod(j - a * (n - i), n)] + f[i - 1][get_mod(j + b * (n - i), n)]) % MOD;
+
+    cout << f[n - 1][get_mod(s, n)] << endl;
+
+    return 0;
+}
 ```
 
