--- a/source/_posts/算法·题目.md
+++ b/source/_posts/算法·题目.md
@@ -447,18 +447,18 @@ int main()
     for (int i = 0; i < n; i ++ ) scanf("%d", &a[i]), a[i] ++ ;
     for (int i = 0; i < n; i ++ ) scanf("%d", &b[i]), b[i] ++ ;
     for (int i = 0; i < n; i ++ ) scanf("%d", &c[i]), c[i] ++ ;
-
+//预处理出每个b[i]与a[i]和c[i]相关的前缀和
     // 求as[]
-    for (int i = 0; i < n; i ++ ) cnt[a[i]] ++ ;
-    for (int i = 1; i < N; i ++ ) s[i] = s[i - 1] + cnt[i];   // 求cnt[]的前缀和
-    for (int i = 0; i < n; i ++ ) as[i] = s[b[i] - 1];
+    for (int i = 0; i < n; i ++ ) cnt[a[i]] ++ ;//cnt记录的是某个数字出现的次数，将a数组中的所有数字出现的次数录入，其中i是从小到大的，所以里面的数已经排好序，可以按序取次数
+    for (int i = 1; i < N; i ++ ) s[i] = s[i - 1] + cnt[i];   // 求cnt[]的前缀和，s[i]记录的即0-i中小于等于i的数的个数
+    for (int i = 0; i < n; i ++ ) as[i] = s[b[i] - 1];//as[i]记录小于b[i]的数字出现的次数。
 
-    // 求cs[]
+    // 求cs[]，重复as过程
     memset(cnt, 0, sizeof cnt);
     memset(s, 0, sizeof s);
-    for (int i = 0; i < n; i ++ ) cnt[c[i]] ++ ;
-    for (int i = 1; i < N; i ++ ) s[i] = s[i - 1] + cnt[i];
-    for (int i = 0; i < n; i ++ ) cs[i] = s[N - 1] - s[b[i]];
+    for (int i = 0; i < n; i ++ ) cnt[c[i]] ++ ;//记录出现次数
+    for (int i = 1; i < N; i ++ ) s[i] = s[i - 1] + cnt[i];//求次数前缀和
+    for (int i = 0; i < n; i ++ ) cs[i] = s[N - 1] - s[b[i]];//因为是找大于b[i]，从n+1到最大值的出现次数。
 
     // 枚举每个b[i]
     LL res = 0;
