--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -189,6 +189,25 @@ int main(){
 }
 ```
 
+### 取位运算
+
+```c++
+int n;
+while(n){
+	 cout<<n%10;
+	 n/=10;
+
+}//注意，这里先输出高位
+```
+
+### 字符串转化为数字
+
+```c++
+
+```
+
+
+
 ### 高精度加法
 
 A、B位数都是10^6
@@ -1401,7 +1420,62 @@ ULL get(int l, int r)
 }
 ```
 
+## 树状数组
 
+* O（logn)
+* 可以动态地给某个位置上的数加上一个数（单点修改）
+* 求某一个前缀和（区间查询）
+* 奇数位置存的都是原数组（第0层）
+
+![](/img/004154.png)
+
+```c++
+#include <cstdio>
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 100010;
+
+int n, m;
+int a[N], tr[N];
+
+int lowbit(int x)
+{
+    return x & -x;
+}
+
+void add(int x, int v)//a[x]+v，更新前缀和
+{
+    for (int i = x; i <= n; i += lowbit(i)) tr[i] += v;
+}
+
+int query(int x)//求到x的前缀和
+{
+    int res = 0;
+    for (int i = x; i; i -= lowbit(i)) res += tr[i];
+    return res;
+}
+
+int main()
+{
+    scanf("%d%d", &n, &m);
+    for (int i = 1; i <= n; i ++ ) scanf("%d", &a[i]);
+    for (int i = 1; i <= n; i ++ ) add(i, a[i]);
+
+    while (m -- )
+    {
+        int k, x, y;
+        scanf("%d%d%d", &k, &x, &y);
+        if (k == 0) printf("%d\n", query(y) - query(x - 1));
+        else add(x, y);
+    }
+
+    return 0;
+}
+```
 
 ## STL简介
 
@@ -1562,47 +1636,3 @@ bitset, 圧位//比如说1024个bool数组要1024个字节，但是bool数组由
     flip()  等价于~
     flip(k) 把第k位取反
 ```
-
-# 数学知识
-
-## 质数
-
-## 约数
-
-## 欧拉函数
-
-## 快速幂
-
-## 扩展欧几里得算法
-
-## 中国剩余定理
-
-## 高斯消元
-
-## 组合技术
-
-## 容斥原理
-
-## 简单博弈论
-
-# 动态规划
-
-## 背包问题
-
-## 线性DP
-
-## 区间DP
-
-## 计数类DP
-
-## 数位统计DP
-
-## 状态压缩DP
-
-## 树形DP
-
-## 记忆化搜索
-
-# 贪心
-
-# 时空复杂度分析
