--- a/source/_posts/算法·题目.md
+++ b/source/_posts/算法·题目.md
@@ -602,3 +602,142 @@ int main()
 }
 ```
 
+## 枚举、模拟
+
+### 日期问题
+
+https://www.acwing.com/problem/content/1231/
+
+```c++
+int months[13] = {0, 31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31};
+
+bool check(int date)
+{
+    int year = date / 10000;
+    int month = date % 10000 / 100;
+    int day = date % 100;
+
+    if (!month || month >= 13 || !day) return false;
+
+    if (month != 2 && day > months[month]) return false;
+    if (month == 2)
+    {
+        bool leap = year % 4 == 0 && year % 100 || year % 400 == 0;
+        if (day > 28 + leap) return false;
+    }
+
+    return true;
+}
+```
+
+### 航班时间
+
+https://www.acwing.com/problem/content/1233/
+
+```c++
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+#include <cstdio>
+using namespace std;
+int getsecond(int h,int m,int s){
+	
+	return h*3600+m*60+s;
+	
+}
+int get_time(){
+	string line;
+	getline(cin,line);
+	if(line.back()!=')') line+=" (+0)";
+	int h1,m1,s1,h2,m2,s2,d;
+	sscanf(line.c_str(),"%d:%d:%d %d:%d:%d (+%d)",&h1,&m1,&s1,&h2,&m2,&s2,&d);
+	return getsecond(h2,m2,s2)-getsecond(h1,m1,s1)+d*24*3600;
+}
+
+
+int main(){
+	string line;
+	int cnt;
+	cin>>cnt;
+	getline(cin,line);
+	while(cnt--){
+		int t =(get_time()+get_time())/2;
+		int hour = t/3600;
+		int minute = t%3600/60;
+		int second = t%60;
+		printf("%02d:%02d:%02d\n",hour,minute,second);
+		
+		
+		
+	}
+	
+	return 0;
+	
+}
+```
+
+### 外卖店优先级
+
+https://www.acwing.com/problem/content/1243/
+
+```c++
+#include <cstdio>
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+
+#define x first
+#define y second
+
+using namespace std;
+
+typedef pair<int, int> PII;
+
+const int N = 100010;
+
+int n, m, T;
+int score[N], last[N];//score表示的是店铺优先级,last表示的是上一次有订单的时刻
+bool st[N];//表示是否在优先缓存中
+
+PII order[N];
+
+int main()
+{
+    scanf("%d%d%d", &n, &m, &T);
+    for (int i = 0; i < m; i ++ ) scanf("%d%d", &order[i].x, &order[i].y);
+    sort(order, order + m);
+
+    for (int i = 0; i < m;)
+    {
+        int j = i;
+        while (j < m && order[j] == order[i]) j ++ ;
+        int t = order[i].x, id = order[i].y, cnt = j - i;
+        i = j;
+
+        score[id] -= t - last[id] - 1;//last后面，t之前有几个时刻
+        if (score[id] < 0) score[id] = 0;
+        if (score[id] <= 3) st[id] = false; // 以上处理的是t时刻之前的信息
+//开始处理t时刻的内容
+        score[id] += cnt * 2;
+        if (score[id] > 5) st[id] = true;
+
+        last[id] = t;
+    }
+
+    for (int i = 1; i <= n; i ++ )
+        if (last[i] < T)
+        {
+            score[i] -= T - last[i];
+            if (score[i] <= 3) st[i] = false;
+        }
+
+    int res = 0;
+    for (int i = 1; i <= n; i ++ ) res += st[i];
+
+    printf("%d\n", res);
+
+    return 0;
+}
+
+```
+
