--- a/source/_posts/算法·题目.md
+++ b/source/_posts/算法·题目.md
@@ -741,3 +741,57 @@ int main()
 
 ```
 
+## 树状数组
+
+### 数星星
+
+https://www.acwing.com/problem/content/1267/
+
+```c++
+#include <cstdio>
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 32010;
+
+int n;
+int tr[N], level[N];//level数组记录的是某等级的星星的数量，tr记录的是星星图
+
+int lowbit(int x)
+{
+    return x & -x;
+}
+
+void add(int x)//加入一颗行星
+{
+    for (int i = x; i < N; i += lowbit(i)) tr[i] ++ ;//加入后后面的星星前面的星星数量加一，即星等加一
+}
+
+int sum(int x)//记录前面有多少个星星
+{
+    int res = 0;
+    for (int i = x; i; i -= lowbit(i)) res += tr[i];
+    return res;
+}
+
+int main()
+{
+    scanf("%d", &n);
+    for (int i = 0; i < n; i ++ )
+    {
+        int x, y;
+        scanf("%d%d", &x, &y);
+        x ++ ;//因为y增序，所以只需要考虑x
+        level[sum(x)] ++ ;//sum(x)即星等，由于求星等不包括x在内，所以先查星等，再把x加进去
+        add(x);
+    }
+
+    for (int i = 0; i < n; i ++ ) printf("%d\n", level[i]);
+
+    return 0;
+}
+```
+
