--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -15,15 +15,15 @@ cin.tie(0);
 //副作用不能使用scanf,printf
 ```
 
-# 时间复杂度
+## 时间复杂度
 
 ![](/img/022716.jpg)
 
-# 基础算法
+## 基础算法
 
-## 排序
+### 排序
 
-### 快速排序——分治 O(nlogn)-O(n²)
+#### 快速排序——分治 O(nlogn)-O(n²)
 
 * 确定分界点：q[l],q[(l+r)/2],q[r];随机
 * 调整区间：第一个区间所有的数都小于等于x，第二个区间所有的数都大于等于x
@@ -57,7 +57,7 @@ int i = l - 1, j = r + 1, x = q[l + r >> 1];
 
 ```
 
-### 归并排序——分治 O(nlogn)
+#### 归并排序——分治 O(nlogn)
 
 * 确定分界点：mid=(l+r)/2
 * 递归排序left,right
@@ -85,13 +85,13 @@ void merge_sort(int q[], int l, int r)
 }
 ```
 
-## 二分
+### 二分
 
 二分不用考虑有没有解
 
 ![](/img/201805.jpg)
 
-### 整数二分
+#### 整数二分
 
 * 有单调性的题目可以二分，但可以二分不一定有单调性，二分的本质不是单调性
 * 二分的本质是性质，使得一部分满足红色性质，一部分满足绿色性质，整个区间可以一分为二，二分可以寻找性质的边界
@@ -145,7 +145,7 @@ int bsearch_2(int l, int r)
 }
 ```
 
-### 浮点数二分
+#### 浮点数二分
 
 注：判断是否满足绿色性质
 
@@ -165,9 +165,9 @@ double bsearch_3(double l, double r)
 }
 ```
 
-## 高精度
+### 高精度
 
-### 大整数存法
+#### 大整数存法
 
 一般从个位开始存，即a[0]为个位数字，最高位在最后
 
@@ -189,7 +189,7 @@ int main(){
 }
 ```
 
-### 取位运算
+#### 取位运算
 
 ```c++
 int n;
@@ -200,7 +200,7 @@ while(n){
 }//注意，这里先输出高位
 ```
 
-### 字符串转化为数字
+#### 字符串转化为数字
 
 ```c++
 
@@ -208,7 +208,7 @@ while(n){
 
 
 
-### 高精度加法
+#### 高精度加法
 
 A、B位数都是10^6
 
@@ -234,7 +234,7 @@ vector<int> add(vector<int> &A, vector<int> &B)
 
 ```
 
-### 高精度减法
+#### 高精度减法
 
 A、B位数都是10^6
 
@@ -268,7 +268,7 @@ vector<int> sub(vector<int> &A, vector<int> &B)
 
 ```
 
-### 高精度乘法
+#### 高精度乘法
 
 一般为大整数x小整数，大整数的位数一般是小于10^6，小整数的数值一般小于10^9
 
@@ -304,7 +304,7 @@ vector<int> mul(vector<int> &A, int b)
 }
 ```
 
-### 高精度除法
+#### 高精度除法
 
 高精度/低精度
 
@@ -339,11 +339,11 @@ vector<int> div(vector<int> &A, int b, int &r)
 }
 ```
 
-## 前缀和与差分
+### 前缀和与差分
 
 数组a1,a2,a3,a4....an
 
-### 前缀和
+#### 前缀和
 
 前缀和数组Si=a1+a2+....+ai 下标一定从1开始
 
@@ -359,14 +359,14 @@ vector<int> div(vector<int> &A, int b, int &r)
 
     [l,r]=s[r]-s[l-1];
 
-#### 一维前缀和
+##### 一维前缀和
 
 ```c++
 S[i] = a[1] + a[2] + ... a[i]
 a[l] + ... + a[r] = S[r] - S[l - 1]
 ```
 
-#### 二维前缀和
+##### 二维前缀和
 
 ![](/img/112605.png)
 
@@ -397,7 +397,7 @@ int main(){
 }
 ```
 
-### 差分
+#### 差分
 
 * a1,a2,a3...an
 
@@ -423,13 +423,13 @@ int main(){
   * 如果想要原数组的每一个数都加上一个值，通过差分和前缀和的时间复杂度为O(1)
     * Bl+c，后面的Al-An全部都会加上C ，如果想要只发生在l-r，则Br+1 - C
 
-#### 一维差分
+##### 一维差分
 
 ```c++
 给区间[l, r]中的每个数加上c：B[l] += c, B[r + 1] -= c
 ```
 
-#### 二维差分
+##### 二维差分
 
 ![](/img/175628.jpg)
 
@@ -477,7 +477,7 @@ int main(){
 }
 ```
 
-## 双指针算法
+### 双指针算法
 
 * 两个序列，一个指针指向第一个序列，另一个指针指向第二个序列
 * 一个序列，一个指针指向开头，一个指针指向结尾
@@ -529,7 +529,7 @@ int main(){
 }
 ```
 
-## 位运算
+### 位运算
 
 * 求n的二进制表示中第k位数字是几，个位是第0位，从右往左算
   * 先把第k位移到最后一位
@@ -556,7 +556,7 @@ lowbit(x)=10;
 * 反码 取反
 * 补码 取反加一（计算机里的负数用补码来表示）
 
-## 离散化
+### 离散化
 
 值域大，个数少
 
@@ -667,7 +667,7 @@ int main()
 
 
 
-## 区间合并
+### 区间合并
 
 * 按区间左端点排序
 * 扫描整个区间，把所有可能有交集的区间合并
@@ -697,11 +697,11 @@ void merge(vector<PII> &segs)
 }
 ```
 
-# 数据结构
+## 数据结构
 
-## 链表与邻接表：树与图的存储
+### 链表与邻接表：树与图的存储
 
-### 单链表（数组模拟）(静态链表)
+#### 单链表（数组模拟）(静态链表)
 
 常用邻接表，存储树和图
 
@@ -752,7 +752,7 @@ for(int i = head;i!=-1;i=ne[i])
 
 struct版在408（1），struct创建新链表比较慢
 
-### 双链表（数组模拟）（静态链表）
+#### 双链表（数组模拟）（静态链表）
 
 常用于优化某些问题
 
@@ -794,9 +794,9 @@ void remove(int a)
 }
 ```
 
-## 栈与队列：单调队列、单调栈
+### 栈与队列：单调队列、单调栈
 
-### 栈（先进后出）
+#### 栈（先进后出）
 
 ```c++
 // tt表示栈顶
@@ -819,13 +819,13 @@ else empty;
 stk[tt];
 ```
 
-#### 中缀表达式
+##### 中缀表达式
 
 ```c++
 
 ```
 
-#### 单调栈
+##### 单调栈
 
 * 单调栈和单调队列都是用栈和队列暴力模拟问题，即找出朴素算法，再看一下没用的元素，删掉元素看是否有单调性，有单调性可以用单调队列或者单调栈优化问题，取极值直接找两个端点，找一个点可以用二分
 
@@ -839,9 +839,9 @@ for (int i = 1; i <= n; i ++ )
 }//时间复杂度为O(n)
 ```
 
-### 队列（先进先出）
+#### 队列（先进先出）
 
-#### 普通队列
+##### 普通队列
 
 ```c++
 // hh 表示队头，tt表示队尾
@@ -865,7 +865,7 @@ if (hh <= tt) not empty;
 
 ```
 
-#### 循环队列
+##### 循环队列
 
 ```c++
 // hh 表示队头，tt表示队尾的后一个位置
@@ -890,7 +890,7 @@ if (hh != tt)
 
 ```
 
-#### 单调队列
+##### 单调队列
 
 * 队列里面存的是下标
 
@@ -914,7 +914,7 @@ for (int i = 0; i < n; i ++ )
 
 
 
-## kmp
+### kmp
 
 思路：
 
@@ -1035,7 +1035,7 @@ kmp匹配过程
 
 ![](/img/010536.jpg)
 
-## Trie
+### Trie
 
 支持两个操作：
 
@@ -1079,7 +1079,7 @@ int query(char *str)
 }
 ```
 
-## 并查集
+### 并查集
 
 * 快速处理
 
@@ -1189,7 +1189,7 @@ int query(char *str)
 
 ```
 
-## 堆
+### 堆
 
 * 功能
   * 插入一个数
@@ -1281,7 +1281,7 @@ heap[k]=x;
 down(k);up(k);
 ```
 
-## Hash表
+### Hash表
 
 * 存储结构
 
@@ -1299,7 +1299,7 @@ down(k);up(k);
     * 模的数一般要取成质数，所以一般要遍历寻找最小的质数
   * 冲突：两个不一样的数映射成了同一个数，处理冲突的方式可以分为开放寻址法和拉链法
 
-### 拉链法
+#### 拉链法
 
 ```c++
 (1) 拉链法
@@ -1345,7 +1345,7 @@ for(int j = 2;j*j<=i;j++)
 
 
 
-### 开放寻址法
+#### 开放寻址法
 
 * 只开一个数组，但是开的长度一般是输入数据的2-3倍
 
@@ -1376,7 +1376,7 @@ if(h[find(x)])== null cout<<"No";
 else cout<<"Yes";
 ```
 
-### 字符串哈希
+#### 字符串哈希
 
 字符串前缀哈希法
 
@@ -1420,7 +1420,7 @@ ULL get(int l, int r)
 }
 ```
 
-## 树状数组
+### 树状数组
 
 * O（logn)
 * 可以动态地给某个位置上的数加上一个数（单点修改）
@@ -1477,13 +1477,40 @@ int main()
 }
 ```
 
-## STL简介
+### 线段树
+
+* 单点修改（Ologn）
+
+![](/img/134823.jpg)
+
+* 区间查询（Ologn）
+
+![](/img/143338.jpg)
+
+* 染色求面积求长度
+
+![](/img/133101.jpg)
+
+* pushup：用子节点信息更新当前节点信息
+* build：在一段区间上初始化线段树
+* modify：修改
+* query：查询
+
+![](/img/144520.jpg)
+
+```c++
+#include 
+```
+
+
+
+### STL简介
 
 详情看备战408（1）
 
 当系统为某一个程序分配空间的时候，所需的时间基本上与空间大小无关，与申请次数有关，比如申请一个长度为1000的数组和申请1000个长度为1的数组，因此vector的思路是可以浪费空间但要减少申请次数，如先申请32，再申请64，不够的时候将长度*2，因此要申请一个长度为n的数组，申请空间次数是logn，额外copy的次数大概是O1
 
-### vector
+#### vector
 
 ```c++
 vector, 变长数组，倍增的思想
@@ -1502,7 +1529,7 @@ vector, 变长数组，倍增的思想
 	for(auto x:a)	cout<<x<<endl;//遍历一遍vector
 ```
 
-### pair
+#### pair
 
 ```c++
 pair<int, int>
@@ -1514,7 +1541,7 @@ pair<int, int>
 //当一个东西有两个不同的属性，可以用pair来存，如果要按照某个属性排序，可以把排序关键字放在first，不需要排序的放在second，然后对整个pair排序，如果有三种属性,可以用pair<int,pair<int,int>>p来存
 ```
 
-### string
+#### string
 
 ```c++
 string，字符串
@@ -1525,7 +1552,7 @@ string，字符串
     c_str()  返回字符串所在字符数组的起始地址
 ```
 
-### queue
+#### queue
 
 ```c++
 queue, 队列
@@ -1540,7 +1567,7 @@ queue, 队列
     q = queue<int> ();
 ```
 
-### priority_queue
+#### priority_queue
 
 ```c++
 priority_queue, 优先队列，默认是大根堆
@@ -1553,7 +1580,7 @@ priority_queue, 优先队列，默认是大根堆
 //或者直接插入负数 heap.push(-x);
 ```
 
-### stack
+#### stack
 
 ```c++
 stack, 栈
@@ -1565,7 +1592,7 @@ stack, 栈
 //没有clear函数
 ```
 
-### deque
+#### deque
 
 ```c++
 deque, 双端队列//相当于加强版vector
@@ -1579,7 +1606,7 @@ deque, 双端队列//相当于加强版vector
     []//支持随机选址
 ```
 
-### set,map,multiset,multimap
+#### set,map,multiset,multimap
 
 ```c++
 set, map, multiset, multimap, 基于平衡二叉树（红黑树），动态维护有序序列
@@ -1614,7 +1641,7 @@ unordered_set, unordered_map, unordered_multiset, unordered_multimap, 哈希表
     不支持 lower_bound()/upper_bound()， 迭代器的++，--，因为内部是无序的，所以和排序有关的所有操作都没法用
 ```
 
-### bitset
+#### bitset
 
 ```c++
 bitset, 圧位//比如说1024个bool数组要1024个字节，但是bool数组由0和1组成，可以将0和1压到每一个字节中，相当于一个字节存8个0或者1，只需要128个字节
