--- a/source/_posts/算法·搜索与图论.md
+++ b/source/_posts/算法·搜索与图论.md
@@ -931,3 +931,97 @@ for (int i = 1; i <= n1; i ++ )
 }
 ```
 
+## 树上启发式合并(DSU on tree)
+
+时间复杂度O（nlogn）
+
+思路：树上启发式合并(DSU on tree)
+
+* 1.先处理子树大小，类似树链剖分分一下重儿子和轻儿子，为了后续操作降低复杂度
+  2.遍历树，对于任何一棵树，先遍历轻儿子，如果有重儿子最后遍历，数据返回的时候只保留重儿子信息，更新颜色出现次数
+  3.如果子树颜色出现的最大数 * 最大数次数 = 子树的大小，那么这颗子树就是颜色平衡树，ans ++即可
+
+概念：
+
+* 重儿子：子树的节点最多的儿子，其中如果两个儿子的子树都相同，那么其中任意个。
+  轻儿子：其余的儿子。
+  重边：父亲到重儿子的边。
+  轻边：其余的边。
+  重链：节点到重儿子的路径。
+
+```c++
+#include <iostream>
+#include <cstring>
+
+using namespace std;
+
+const int N = 200010 , M = N * 2;
+
+int n;
+int h[N], e[M], ne[M], idx;
+int color[N], sz[N], son[N], cnt[N];
+int res, sum;
+int mx;
+
+void add(int a, int b) {//加入点
+    e[idx] = b, ne[idx] = h[a], h[a] = idx ++ ;
+}
+
+int dfs_son(int u , int father) {
+    sz[u] = 1;
+    for (int i = h[u]; ~i; i = ne[i]) {
+        int j = e[i];
+        if(j == father) continue;
+        sz[u] += dfs_son(j , u);
+        if (sz[j] > sz[son[u]]) son[u] = j;
+    }
+    return sz[u];
+}
+
+void update(int u, int father , int val, int pson) {//更新
+    int c = color[u];
+    cnt[c] += val;
+    if (cnt[c] > mx) mx = cnt[c], sum = 1;
+    else if (cnt[c] == mx) sum ++ ;
+
+    for (int i = h[u]; ~i; i = ne[i]) {
+        int j = e[i];
+        if (j == pson || j == father) continue;
+        update(j, u , val, pson);
+    }
+}
+
+void dfs(int u, int father , int op) {
+    for (int i = h[u]; ~i; i = ne[i]) {
+        int j = e[i];
+        if (j == son[u] || j == father) continue;
+        dfs(j, u , 0);
+    }
+
+    if (son[u]) dfs(son[u], u , 1);
+    update(u, father , 1, son[u]);
+
+    if (sum * mx == sz[u]) res ++ ;
+
+    if (!op) update(u, father , -1, 0), mx = 0;
+}
+
+int main() {
+    cin >> n;
+
+    memset(h, -1, sizeof h);
+    for (int i = 1; i <= n; i ++ ) {
+        int p;
+        cin >> color[i] >> p;
+        if(i != 1)add(p, i) , add(i , p);
+    }
+
+    dfs_son(1 , -1);
+    dfs(1, -1 , 1);
+
+    cout << res << endl;
+
+    return 0;
+}
+```
+
