--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -569,14 +569,16 @@ lowbit(x)=10;
   * 二分
 * 保序离散化，小的在前面大的在后面
 
+![](/img/4af9b192aa3a4e588a236fb9e6202c06.png)
+
 ```c++
 vector<int> alls; // 存储所有待离散化的值
 sort(alls.begin(), alls.end()); // 将所有值排序
 alls.erase(unique(alls.begin(), alls.end()), alls.end());   // 去掉重复元素
-
+//alls存储的是坐标，而a[]存储的是离散化后的坐标插入的值，s[]存储的是a[]的前缀和
 // 二分求出x对应的离散化的值
 int find(int x) // 找到第一个大于等于x的位置
-{
+{//因为alls已经去重排序，所以alls里面的数对应的下标，就是离散化以后对应的坐标，找alls里面大于等于x的最大值的坐标，就是找离散化后的坐标
     int l = 0, r = alls.size() - 1;
     while (l < r)
     {
@@ -1014,7 +1016,7 @@ int main(){
 	    if(s[i]==p[j+1]) j++;//下一个字符终于匹配，继续检验下一个位置的字符是否匹配 
 		if(j==n) {
 			//匹配成功 
-			cout<<i-n;
+			cout<<i-n<<" ";
 			j=ne[j];
 		}
 	}
