--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -21,7 +21,7 @@ index_img: /img/1920x1080 (7).jpg
 
 ### 计算机硬件的基本组成
 
-![](/img/屏幕截图 2024-04-15 145732.jpg)
+![](/img/145732.jpg)
 
 #### 早期冯诺依曼机的结构
 
@@ -49,7 +49,7 @@ index_img: /img/1920x1080 (7).jpg
 
 ![](/img/145236.jpg)
 
-![](/img/屏幕截图 2024-04-15 145449.jpg)
+![](/img/145449.jpg)
 
 ##### 特点
 
@@ -70,7 +70,7 @@ index_img: /img/1920x1080 (7).jpg
 
   * ==数据在存储体内按地址存储==
 
-    ![](/img/屏幕截图 2024-04-15 151037.jpg)
+    ![](/img/151037.jpg)
 
     * 存储单元：每个存储单元存放一串二进制代码
     * 存储字：存储单元中二进制代码的组合
@@ -85,17 +85,17 @@ index_img: /img/1920x1080 (7).jpg
     * MDR位数=存储字长
   * 读取
 
-  ![](/mg/屏幕截图 2024-04-15 150346.jpg)
+  ![](/img/150346.jpg)
 
   * 写入
 
-  ![](/img/屏幕截图 2024-04-15 150449.jpg)
+  ![](/img/150449.jpg)
 
 #### 运算器
 
 用于实现算术运算（加减乘除）、逻辑运算（与或非）
 
-![](/img/屏幕截图 2024-04-15 151924.jpg)
+![](/img/151924.jpg)
 
 ##### 基本组成
 
@@ -118,3 +118,7 @@ index_img: /img/1920x1080 (7).jpg
   * 执行指令 CU
 
 #### 计算机的工作过程
+
+![](/img/155208.jpg)
+
+![](/img/155801.jpg)
