--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -60,6 +60,8 @@ index_img: /img/1920x1080 (7).jpg
 
 ### 各个硬件的工作原理
 
+![](/img/163027.jpg)
+
 #### 主存储器
 
 ##### 基本组成
@@ -68,7 +70,7 @@ index_img: /img/1920x1080 (7).jpg
 
   * 用于存放数据，由一系列的存储元件构成，用于存放零和一
 
-  * ==数据在存储体内按地址存储==
+  * `数据在存储体内按地址存储`
 
     ![](/img/151037.jpg)
 
@@ -79,6 +81,7 @@ index_img: /img/1920x1080 (7).jpg
 
 * 寄存器
 
+  * 注：现在的计算机通常把MAR、MDR也集成在CPU内
   * MAR（存储地址寄存器）
     * MAR位数反映了存储单元的个数
   * MDR（存储数据寄存器）
@@ -102,13 +105,13 @@ index_img: /img/1920x1080 (7).jpg
 * ACC：累加器，用于存放操作数或者运算结果
 * MQ：乘商寄存器，在乘、除运算时，用于存放操作数或者运算结果
 * X：通用的操作数寄存器，用于存放操作数
-* ==ALU：蒜素逻辑单元，通过复杂的电路实现算数运算、逻辑运算====，上面为数据储存结构==
+* `ALU：蒜素逻辑单元，通过复杂的电路实现算数运算、逻辑运算，上面为数据储存结构`
 
 #### 控制器
 
 ##### 基本组成
 
-* ==CU：控制单元，分析指令，给出控制信号==
+* `CU：控制单元，分析指令，给出控制信号`
 * IR：指令寄存器，存放当前执行的指令
 * PC：程序计数器，存放下一条指令地址，有自动加1的功能
 
@@ -119,6 +122,22 @@ index_img: /img/1920x1080 (7).jpg
 
 #### 计算机的工作过程
 
+* 过程演示
+
 ![](/img/155208.jpg)
 
 ![](/img/155801.jpg)
+
+![](/img/161851.jpg)
+
+![](/img/162123.jpg)
+
+![](/img/162450.jpg)
+
+![](/img/162559.jpg)
+
+* 总结
+
+![](/img/162909.jpg)
+
+### 计算机系统的多级层级结构
