--- a/source/_posts/计算机组成原理.md
+++ b/source/_posts/计算机组成原理.md
@@ -83,9 +83,9 @@ index_img: /img/1920x1080 (7).jpg
 
   * 注：现在的计算机通常把MAR、MDR也集成在CPU内
   * MAR（存储地址寄存器）
-    * MAR位数反映了存储单元的个数
+    * MAR位数反映了存储单元的个数（最多支持多少个）
   * MDR（存储数据寄存器）
-    * MDR位数=存储字长
+    * MDR位数=存储字长（bits）=每个存储单元的大小
   * 读取
 
   ![](/img/150346.jpg)
@@ -141,3 +141,59 @@ index_img: /img/1920x1080 (7).jpg
 ![](/img/162909.jpg)
 
 ### 计算机系统的多级层级结构
+
+![](/img/171555.jpg)
+
+#### 计算机系统的层次结构
+
+![](/img/171039.jpg)
+
+![](/img/171511.jpg)
+
+### 计算机的性能指标
+
+#### 存储器的性能指标
+
+![](/img/172819.jpg)
+
+* 存储器的容量
+
+  * 总容量=存储单元个数*存储字长
+
+    ​            =存储单元个数*存储字长/8
+
+#### CPU的性能指标
+
+* CPU主频：CPU内数字脉冲信号震荡的频率，表示的是每秒钟会有多少个数字脉冲，即会出多少个时钟周期
+
+  * 如10Hz可能是每秒钟有10个脉冲信号
+
+  ![](/img/191603.jpg)
+
+$$
+CPU时钟周期=\frac{1}{主频}
+$$
+
+$$
+CPU执行时间（整个程序的耗时）=\frac{CPU时钟周期数}{主频}=\frac{指令条数*CPI}{主频}
+$$
+
+$$
+IPS（每秒执行多少条指令）=\frac{主频}{平均CPI}
+$$
+
+
+
+#### 系统整体的性能指标
+
+* 数据通路带宽：数据总线一次所能并行传送信息的位数（各硬件部件通过数据总线传输数据）
+
+* 吞吐量：指系统在单位时间内处理请求的数量
+  * 它取决于信息能多快地输入内存，CPU能多快地取指令，数据能多快地从内存取出或存入，以及所得结果能多快地从内存送给一台外部设备。这些步骤中的每一步都关系到主存，因此，系统吞吐量主要取决于主存的存取周期。（了解即可）
+* 响应时间：指从用户向计算机发送一个请求，到系统对该请求做出相应并获得它所需要的结果的等待时间
+  * 通常包括CPU时间（运行一个程序所花费的时间）与等待时间（用于磁盘访问、存储器访问、I/O操作、操作系统开销等时间）（简单了解即可）
+
+#### 系统整体的性能指标（动态测试）
+
+* 基准程序（跑分软件）是用来测量计算机处理速度的一种实用程序，以便于被测量的计算机性能可以与运行相同程序的其他计算机性能进行比较
+
