--- a/source/_posts/法学转码心得.md
+++ b/source/_posts/法学转码心得.md
@@ -6,7 +6,7 @@ tags: 水一水
 
 
 
-* 认清自己的目标：是否坚定选择转码，对法学没有留恋，不要瞻前顾后，跨保基本不可能，直接对法学课程降低要求，不挂科即可，其余时间用来学习计算机相关课程，最好大一大二就开始
+* 认清自己的目标：是否坚定选择转码，对法学没有留恋，不要瞻前顾后，跨保基本不可能，直接对法学课程降低要求，不挂科即可，其余时间用来学习计算机相关课程，最好大一大二就开始，不是要求大一大二就开始准备考研，至少得看一遍教材/网课，有个基本的印象和理解
 
 * 了结转码所需要的知识，即408的准备教材：数学一：高等数学、线性代数、概率论，计算机组成原理、操作系统、计算机网络、数据结构。
 
@@ -27,6 +27,8 @@ tags: 水一水
 
     * csapp：深入了解计算机系统（时间不紧急）
     * cs50（时间不紧急）
+  * 袁春风老师第二版紫皮书+课后习题答案
+    * 建议计组先听王道课，就跟法学生期末听法考课一样，好上手
 
   * 操作系统
 
@@ -39,5 +41,5 @@ tags: 水一水
   * 概率论
 
     
-
+  
     
